src/pages/home/styles.module.css
.home {
  width: 100vw;
  overflow-x: hidden;
}

.home-container {
  width: calc(100% - 20vw)
}

.top-section {
  display: flex;
  justify-content: center;
  height: 40vw;
  flex-wrap: wrap;
  background-color: #a7bedf;
  position: relative;
  overflow: visible;
  margin-bottom: 300px;
}

.ellipse {
  width: 120vw;
  height: 30vh;
  border-radius: 50%;
  background-color: #a7bedf;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  bottom: -15vh;
}

.bottom-section {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  background-color: white;
  margin-bottom: 100px;
}

.header {
  width: 100%;
  height: 100px;
  position: relative;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.img-safe-stats {
  height: 30%;
}

.links {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.links > a {
  margin-right: 30px;
  text-decoration: none;
  color: #fbfbfb;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 500;
}

.img-user {
  height: 20px;
}

.main-info {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: nowrap;
  position: relative;
}

.main-text {
  color: white;
  height: 400px;
  width: 60%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.main-title {
  font-size: 50px;
  font-weight: 800;
}

.main-paragraph {
  font-size: 22px;
  font-weight: 400;
}

.main-image {
  position: relative;
  width: 40%;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
}

.img-ome {
  width: 60%;
}

.img-hologram {
  width: 100%;
  margin-top: -30%;
}

.button {
  margin: auto;
  max-width: 500px;
}

.section {
  width: 100%;
  margin-bottom: 100px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.section-text {
  width: 50%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: space-between;
}

.section-title {
  font-size: 36px;
  font-weight: 700;
  color: #2B3F6C;
}

.section-paragraph {
  font-size: 26px;
  font-weight: 500;
  color:#565555;
}

.section-image {
  height: 500px;
}

.card-group {
  width: 100%;
  height: 700px;
  position: relative;
  margin-top: 100px;
  margin-bottom: 100px;
}

.card {
  width: 350px;
  height: 500px;
  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.19);
  border-radius: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  padding: 80px 40px;
  text-align: center;
}

.card:nth-child(1) {
  position: absolute;
  left: calc(50% - 320px);
  transform: translateX(-50%);
  bottom: 0;
}

.card:nth-child(2) {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  z-index: 2;
}

.card:nth-child(3) {
  position: absolute;
  left: calc(50% + 320px);
  transform: translateX(-50%);
  bottom: 0;
}

.card-blue {
  background-color: #2B3F6C;
  color: #F6F6F6;
}

.card-white {
  background-color: #F6F6F6;
  color: #2B3F6C;
}

.card-text {
  font-size: 22px;
  font-weight: 400;
}

.card-image {
  width: 130px;
}

@media only screen and (max-width: 1250px) {

  .card-group {
    height: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .card {
    margin-bottom: 50px;
  }

  .card:nth-child(1) {
    position: static;
    transform: translateX(0);
  }

  .card:nth-child(2) {
    position: static;
    transform: translateX(0);
  }

  .card:nth-child(3) {
    position: static;
    transform: translateX(0);
  }
}

@media only screen and (max-width: 900px) {
  
  .section:nth-child(1) {
    flex-direction: column;
  }

  .section:nth-child(2) {
    flex-direction: column-reverse
  }

  .section-image {
    margin-bottom: 100px;
  }

  .section-text {
    text-align: center;
    width: 80%
  }

}


@media only screen and (max-width: 500px) {

  .links {
    flex-direction: column;
    align-items: flex-end;
  }

  .links > a {
    margin-right: 10px;
  }

  .top-section {
    height: 60vw;
  }
  
  .main-text {
    width: 90%;
    height: auto;
    text-align: center;
    margin-top: 120px;
  }

  .main-text * {
    margin-bottom: 20px;
  }
  
  .button {
    margin: 0;
  }

  .main-title {
    font-size: 30px;
  }
  
  .main-paragraph {
    font-size: 20px;
  }

  .main-image {
    display: none;
  }

  .home-container {
    width: calc(100% - 20px)
  }

  .card {
    width: 90%;
    height: auto;
  }

}

